--- a/config/locales/social_share_button.en.yml
+++ b/config/locales/social_share_button.en.yml
@@ -13,6 +13,6 @@ en:
     pinterest: Pinterest
     email: Email
     linkedin: Linkedin
-    wechat: WeChat
-    wechat_footer: Open your WeChat, click "Discover" button then click the "Scan QR Code" menu.
+    weichat: Weichat
     vkontakte: Vkontakte
+    whatsapp: Whatsapp
