--- a/config/locales/social_share_button.zh-CN.yml
+++ b/config/locales/social_share_button.zh-CN.yml
@@ -13,6 +13,6 @@
     pinterest: Pinterest
     email: Email
     linkedin: Linkedin
-    wechat: 微信
-    wechat_footer: 打开微信，点击底部的“发现”，<br/> 使用“扫一扫”即可将网页分享至朋友圈。
+    weichat: 微信
     vkontakte: Vkontakte
+    whatsapp: Whatsapp
