--- a/config/locales/social_share_button.zh-TW.yml
+++ b/config/locales/social_share_button.zh-TW.yml
@@ -13,6 +13,6 @@
     pinterest: Pinterest
     email: Email
     linkedin: Linkedin
-    wechat: 微信
-    wechat_footer: 打開微信，點擊底部的“發現”，<br/> 使用“掃一掃”即可將網頁分享至朋友圈。
+    weichat: 微信
     vkontakte: Vkontakte
+    whatsapp: Whatsapp
